modified name in manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
- "name": "Dinesh Downloader",
+ "name": "Dawn Downloader",
     "description": "A small Downloader for Facebook videos",
     "version": "0.1",
     "permissions": [
